---------------------------------------------------------------------------
Version 3.21.1  [DEVEL] (rgerhards), 2008-07-28
- enhanced config file checking - no active actions are detected
- added -N rsyslogd command line option for a config validation run
  (which does not execute actual syslogd code and does not interfere
  with a running instance)
- somewhat improved emergency configuration. It is now also selected
  if the config contains no active actions
- rsyslogd error messages are now reported to stderr by default. can be
  turned off by the new "$ErrorMessagesToStderr off" directive
 Thanks to HKS for suggesting these new features.
---------------------------------------------------------------------------
Version 3.21.0  [DEVEL] (rgerhards), 2008-07-18
- starts a new devel branch
- added a generic test driver for RainerScript plus some test cases
  to the testbench
- added a small diagnostic tool to obtain result of gethostname() API
- imported all changes from 3.18.1 until today (some quite important,
  see below)
---------------------------------------------------------------------------
Version 3.19.11 [BETA] (rgerhards), 2008-??-??
---------------------------------------------------------------------------
Version 3.19.10 [BETA] (rgerhards), 2008-07-15
- start of a new beta branch based on former 3.19 devel branch
- bugfix: bad memory leak in disk-based queue modes
- bugfix: UDP syslog forwarding did not work on all platforms
  the ai_socktype was incorrectly set to 1. On some platforms, this
  lead to failing name resolution (e.g. FreeBSD 7). Thanks to HKS for
  reporting the bug.
- bugfix: priority was incorrectly calculated on FreeBSD 7,
  because the LOG_MAKEPRI() C macro has a different meaning there (it
  is just a simple addition of faciltity and severity). I have changed
  this to use own, consistent, code for PRI calculation. Thank to HKS
  for reporting this bug.
- bugfix (cosmetical): authorization was not checked when gtls handshake