@@ -1,0 +1,1 @@
+$includeconfig cfg1.testin
