@@ -1,0 +1,1 @@
+rsyslogd: End of config validation run. Bye.
