@@ -1,5 +1,8 @@
 ---------------------------------------------------------------------------
 Version 3.21.1  [DEVEL] (rgerhards), 2008-07-28
+- bugfix: no error was reported if the target of a $IncludeConfig
+  could not be accessed.
+- added testbed for common config errors
 - enhanced config file checking - no active actions are detected
 - added -N rsyslogd command line option for a config validation run
   (which does not execute actual syslogd code and does not interfere
